# ico

./: .gitignore  Makefile  README.md  ico.code-workspace  pickle_test.py  pyproject.toml  pyrightconfig.json  simple_example.py
.github/workflows/: ci.yml
docs/images/: README.md
src/apriori/ico/: __init__.py
src/apriori/ico/agents/mp_process/: agent.py  agent_host.py  mp_process.py  mp_process_agent.py
src/apriori/ico/channels/mp_queue/: channel.py  receive_endpoint.py  send_endpoint.py
src/apriori/ico/core/: __init__.py  async_operator.py  async_stream.py  batcher.py  chain.py  context_operator.py  context_pipeline.py  debug_flow.py.bak  epoch.py  flow_operator.py  identity.py  iterate.py  iterator.py  node.py  operator.py  pipeline.py  process.py  signature.py  signature_utils.py  sink.py  source.py  stream.py  streamline.py  tree_utils.py  tree_walker.py  types.py  utils.py
src/apriori/ico/core/dsl/: async_operator.py  async_stream.py  node.py  operator.py  parallel_stream.py  pipeline.py  process.py  sink.py  source.py  stream.py  tree.py
src/apriori/ico/core/meta/: collector.py  deep_collector.py  describer.py  flow_meta.py  ico_form.py  ico_form_inference.py  meta.py  node_meta.py  remote.py  utils.py
src/apriori/ico/core/meta/inspect/: collector.py  signature.py
src/apriori/ico/core/runtime/: agent.py  command.py  contour.py  discovery.py  event.py  events.py  exceptions.py  monitor.py  node.py  portal.py  progress.py  runtime.py  runtime_hierarchy.py  runtime_operator.py  runtime_state.py  runtime_tree.py  runtime_wrapper.py  shell.py  state.py  tool.py  toolbox.py  tree_walker.py  types.py  utils.py
src/apriori/ico/core/runtime/channel/: channel.py  messages.py  utils.py
src/apriori/ico/core/runtime/channels/: channel.py  messages.py  types.py
src/apriori/ico/core/runtime/progress/: mixin.py  noop.py  types.py
src/apriori/ico/describe/: describe.py  describer.py  options.py  rich_style.py  rich_utils.py  utils.py
src/apriori/ico/describe/plan/: options.py
src/apriori/ico/describe/plan/rich_render/: batcher.py  custom_renderer.py  debug.py  group_renderer.py  mp_process.py  options.py  plan_renderer.py  render_target.py  renderer_registry.py  row_renderer.py  sink.py  source.py  stream.py  utils.py
src/apriori/ico/describe/plan/rich_renderer/: custom_renderer.py  debug.py  demo.py  group_renderer.py  plan_renderer.py  render_target.py  renderer_registry.py  row_renderer.py
src/apriori/ico/describe/runtime/: options.py
src/apriori/ico/describe/runtime/rich_renderer/: custom_renderer.py  debug.py  render_target.py  row_renderer.py  tree_renderer.py  utils.py
src/apriori/ico/examples/: toy_dataloader_trainer.py
src/apriori/ico/inspect/: collector.py  describe.py  describe_plan.py  describe_runtime.py  describe_utils.py  signature.py  utils.py
src/apriori/ico/runtime/agent/mp/: mp_agent.py  mp_channel.py
src/apriori/ico/runtime/agent/mp_process/: mp_agent.py  mp_process.py  mp_process_agent.py  mp_worker.py
src/apriori/ico/tools/: monitor_node.py
src/apriori/ico/tools/printer/: node.py  printer_node.py  rich_printer_tool.py
src/apriori/ico/tools/progress/: mixin.py  node.py  noop.py  rich_progress_tool.py  tool.py  types.py
src/apriori/ico/utils/data/: batcher.py
src/examples/: ico_basics.ipynb  ico_mp_basic.py  ico_mp_basic_pool.py  ico_runtime_basics.ipynb  linear_regression.ipynb  mp_basic_pool.py  toy_example.py
src/examples/ml/: ico_linear_regression.ipynb  linear_regression.ipynb  skrub_example.ipynb  skrub_pipeline.ipynb.bak  skrub_pipeline.py
src/examples/ml/cv/cifar/: complete_flow.ipynb  ico_cifar_complete_flow.ipynb  ico_cifar_complete_flow_mp.py
src/examples/ml/skrub/: __init__.py  apply_to_cols.py  apply_to_cols.py.bak  base.py  data.py  debug_skrub.py.bak  demo.py  demo_apply_to_cols.py  ops.py  renderer.py  transformer.py
src/examples/vision/cifar/: augment.py  complete_flow.ipynb  data_flow.py  dataset.py  train_flow.ipynb
src/examples/visual/cifar/: cifar.ipynb  data_flow.ipynb  data_flow.py  data_loader_demo.py  dataset.py  train_flow.ipynb
src/ico/: __init__.py  test_describe.py
src/ico/core/: async_operator.py  async_stream.py  batcher.py  chain.py  context_operator.py  context_pipeline.py  epoch.py  identity.py  node.py  operator.py  pipeline.py  process.py  signature.py  signature_utils.py  sink.py  source.py  stream.py  tree_utils.py
src/ico/core/runtime/: agent.py  event.py  monitor.py  node.py  printer.py  progress.py  runtime.py  runtime_wrapper.py  state.py  tool.py  toolbox.py  utils.py
src/ico/core/runtime/channel/: channel.py  messages.py
src/ico/describe/: __init__.py  describer.py  options.py  rich_style.py  rich_utils.py  utils.py
src/ico/describe/plan/: options.py
src/ico/describe/plan/rich_renderer/: custom_renderer.py  demo.py  group_renderer.py  plan_renderer.py  render_target.py  renderer_registry.py  row_renderer.py
src/ico/describe/runtime/: options.py
src/ico/describe/runtime/rich_renderer/: custom_renderer.py  demo.py  render_target.py  renderer_registry.py  row_renderer.py  tree_renderer.py  utils.py
src/ico/runtime/agent/mp/: mp_agent.py  mp_channel.py
src/ico/tools/printer/: rich_printer_tool.py
src/ico/tools/progress/: rich_progress_tool.py
src/tests/: conftest.py
src/tests/apriori/ico/core/: test_data_loader_integration.py  test_ignature_utils.py  test_signature.py
(+87 files in other folders)
