[project]
name = "apriori.ico"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
description = "Apriori ICO (Input → Context → Output) declarative, strictly typed DSL and runtime for composable computation flows."
readme = "README.md"

[tool.poetry]
packages = [
    { include = "apriori", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
ruff = "^0.6.8"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"

# ───────────────────────────────────────────────
# Ruff
# ───────────────────────────────────────────────

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# ───────────────────────────────────────────────
# mypy
# ───────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_no_return = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
disallow_any_expr = true
disallow_any_unimported = true
disallow_subclassing_any = true
show_error_codes = true

# this project uses namespace package from src/
mypy_path = "src"

namespace_packages = true
explicit_package_bases = true

plugins = []

# ───────────────────────────────────────────────
# pytest
# ───────────────────────────────────────────────

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["src/tests"]
addopts = "-v"