[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "apriori.ico"
version = "0.1.0"
description = "ICO formalizes a common ML pattern: take Input, apply Context, produce Output, and provides an elegant, type-safe, and fully-transparent framework for ML engineers and researchers."
readme = "README.md"
license = {text = "Apache 2.0"}
authors = [
    {name = "Sergei Shumilin", email = "shumilinss@gmail.com"}
]
maintainers = [
    {name = "Sergei Shumilin", email = "shumilinss@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
keywords = ["machine-learning", "pipeline", "type-safety", "functional-programming", "framework"]
requires-python = ">=3.10,<3.13"
dependencies = [
    "rich>=14.2.0",
    "ipywidgets>=8.1.8"
]

[project.optional-dependencies]
vision = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "matplotlib>=3.10.7"
]

[project.urls]
Homepage = "https://github.com/apriori3d/ico"
Documentation = "https://github.com/apriori3d/ico/blob/main/README.md"
Repository = "https://github.com/apriori3d/ico"
Issues = "https://github.com/apriori3d/ico/issues"

[tool.poetry]
name = "apriori.ico"
version = "0.1.0"
description = "Apriori ICO (Input → Context → Output) declarative, strictly typed DSL and runtime for composable computation flows."
readme = "README.md"
packages = [
    { include = "apriori", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rich = "^14.2.0"
torch = {version = "^2.9.1", optional = true}
torchvision = {version = "^0.24.1", optional = true}
matplotlib = {version = "^3.10.7", optional = true}
ipywidgets = "^8.1.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
ruff = "^0.6.8"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"

[tool.poetry.extras]
vision = [
    "torch",
    "torchvision",
    "matplotlib"
]

# ───────────────────────────────────────────────
# Ruff
# ───────────────────────────────────────────────

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# ───────────────────────────────────────────────
# mypy
# ───────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_no_return = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
disallow_any_expr = true
disallow_any_unimported = true
disallow_subclassing_any = true
show_error_codes = true

# Ignore Any-related errors for now
disable_error_code = ["misc", "redundant-cast", "unused-ignore"]

# this project uses namespace package from src/
mypy_path = "src"

namespace_packages = true
explicit_package_bases = true

plugins = []

# [[tool.mypy.overrides]]
# module = "apriori.ico.tools.progress.*"
# disable_error_code = ["misc"]

# ───────────────────────────────────────────────
# pytest
# ───────────────────────────────────────────────

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["src/tests"]
addopts = "-v"